.unsafe-audit/audit/tests/expected_errors/concurrent_promise_task_send_compilefail.stderr
error[E0277]: `Rc<u32>` cannot be sent between threads safely
  --> tests/compile_fail/concurrent_promise_task_send_compilefail.rs
   |
   | requires_send(t);
   |               ^ `Rc<u32>` cannot be sent between threads safely
   |
   = help: within `NotSendCtx`, the trait `Send` is not implemented for `Rc<u32>`
note: required because it appears within the type `ConcurrentPromiseTask<'_, NotSendCtx>`
